More modernized scripts.

--- a/build-tools/build-infra/src/main/groovy/lucene.hacks.dummy-outputs.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.hacks.dummy-outputs.gradle
@@ -15,27 +15,28 @@
  * limitations under the License.
  */
 
+import java.nio.file.Files
+
 // LUCENE-9505: utility function that sets up dummy outputs for a task so that
 // clean[TaskName] works and allows selective re-runs.
-
-def setupDummyOutputs = { Task task ->
-  File dummyOutput = file("${task.project.buildDir}/tasks/${task.name}/dummy-output.txt")
-  task.outputs.file(dummyOutput)
-  task.doLast {
-    if (!dummyOutput.exists()) {
-      dummyOutput.createNewFile()
-    }
-  }
-}
 
 allprojects {
   tasks.matching {
     it.name.startsWith("ecjLint") ||
-    it.name in [
-        "gradlewScriptsTweaked",
-        "validateSourcePatterns"
-    ] }.all { Task task ->
-    task.logger.info("Setting up ${task.path} as no-output.")
-    setupDummyOutputs(task)
+        it.name in [
+          "gradlewScriptsTweaked",
+          "validateSourcePatterns"
+        ]
+  }.configureEach { Task task ->
+    task.logger.info("Adding a dummy-output to ${task.path}.")
+
+    File dummyOutput = layout.buildDirectory.file("tasks/${task.name}/dummy-output.txt").get().asFile
+    task.outputs.file(dummyOutput)
+
+    task.doLast {
+      if (!dummyOutput.exists()) {
+        Files.createFile(dummyOutput.toPath())
+      }
+    }
   }
 }
