--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ plugins {
   id "lucene.publications.maven-to-nexus-snapshots"
 
   id "lucene.misc.measure-task-times"
+  id "lucene.misc.pylucene"
 
   id "lucene.datasets.external-datasets"
 
@@ -63,6 +64,12 @@ plugins {
   id "lucene.hacks.wipe-gradle-temp"
   id "lucene.hacks.turbocharge-jvm-opts"
   id "lucene.hacks.dummy-outputs"
+
+  id "lucene.documentation"
+  id "lucene.documentation.changes-to-html"
+  id "lucene.documentation.markdown"
+  id "lucene.documentation.render-javadoc"
+  id "lucene.documentation.check-broken-links"
 
   // perhaps move this to a convention plugin or remove entirely?
   id "lucene.build-infra"
@@ -87,11 +94,3 @@ apply from: file('gradle/generation/forUtil.gradle')
 apply from: file('gradle/generation/antlr.gradle')
 apply from: file('gradle/generation/unicode-test-classes.gradle')
 apply from: file('gradle/generation/extract-jdk-apis.gradle')
-
-apply from: file('gradle/documentation/documentation.gradle')
-apply from: file('gradle/documentation/changes-to-html.gradle')
-apply from: file('gradle/documentation/markdown.gradle')
-apply from: file('gradle/documentation/render-javadoc.gradle')
-apply from: file('gradle/documentation/check-broken-links.gradle')
-
-apply from: file('gradle/pylucene/pylucene.gradle')
