--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.kuromoji.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.kuromoji.gradle
@@ -14,6 +14,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+import de.undercouch.gradle.tasks.download.Download
 
 // This downloads and compiles Kuromoji dictionaries.
 
@@ -30,11 +31,9 @@ def recompileDictionary(project, dictionaryName, Closure closure) {
 }
 
 configure(project(":lucene:analysis:kuromoji")) {
-  apply plugin: deps.plugins.undercouch.download.get().pluginId
-
-  plugins.withType(JavaPlugin) {
+  plugins.withType(JavaPlugin).configureEach {
     project.ext {
-      targetDir = file("src/resources")
+      targetDir = project.file("src/resources")
     }
 
     task deleteDictionaryData() {
@@ -76,7 +75,7 @@ configure(project(":lucene:analysis:kuromoji")) {
           executable "git"
           args += [
               "apply",
-              file("src/tools/patches/Noun.proper.csv.patch").absolutePath
+              project.file("src/tools/patches/Noun.proper.csv.patch").absolutePath
           ]
         }
 
