--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,7 @@ plugins {
   id "lucene.regenerate.moman"
   id "lucene.regenerate.kuromoji"
   id "lucene.regenerate.nori"
+  id "lucene.regenerate.icu"
 
   // perhaps move this to a convention plugin or remove entirely?
   id "lucene.build-infra"
@@ -88,7 +89,6 @@ description = 'Grandparent project for Apache Lucene Core'
 apply from: file('gradle/_to-remove/globals.gradle')
 
 // Source or data regeneration tasks
-apply from: file('gradle/generation/icu.gradle')
 apply from: file('gradle/generation/javacc.gradle')
 apply from: file('gradle/generation/forUtil.gradle')
 apply from: file('gradle/generation/antlr.gradle')
