--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.icu.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.icu.gradle
@@ -1,6 +1,3 @@
-import org.apache.tools.ant.taskdefs.condition.Os
-import java.nio.file.Files
-
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
@@ -18,7 +15,10 @@ import java.nio.file.Files
  * limitations under the License.
  */
 
-def resources = scriptResources(buildscript)
+import org.apache.tools.ant.taskdefs.condition.Os
+import java.nio.file.Files
+
+def resources = rootProject.file("gradle/regenerate/icu")
 
 /*
  * Regenerates ICU-related data files.
